# gofish

./: .gitignore  README.md  c2s.capnp  flake.nix  s2c.capnp  schema.fbs
api/: Cargo.toml  schema_server.fbs
api/src/: c2s_capnp.rs  main.rs  s2c_capnp.rs  schema_generated.rs  schema_server_generated.rs
frontend/: package.json
frontend-svelte/: .envrc  package.json
frontend-svelte/src/: app.css  app.html  c2s.capnp.ts  go-fish.ts  s2c.capnp.ts  schema_client.ts
frontend-svelte/src/go-fish/: cmsg-table.ts  cmsg.ts  create.ts  error-s.ts  game-creation-response-s.ts  game-ref.ts  identify-c.ts  join.ts  smsg-table.ts  smsg.ts  start-game-c.ts
frontend-svelte/src/lib/: Button.svelte  Center.svelte
frontend-svelte/src/routes/: +page.svelte  Name.svelte  RoomType.svelte
frontend/src/pages/: index.tsx
frontend/src/styles/: globals.css
